# Razumov_VocalChainer

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  skills-lock.json
.cursor/rules/: agent-build-after-changes.mdc  answer-in-russian.mdc  code-health-check.mdc  cross-platform-only.mdc  document-knowledge.mdc  dsp-audio-safety.mdc  git-auto-checkpoint.mdc  multi-message-task-continuity.mdc  node-module-conventions.mdc  performance-checkpoints.mdc  plugin-artifacts-only.mdc  preserve-working-code.mdc  refactor-suspicious-log.mdc  response-version-footer.mdc  ui-strings-ascii.mdc  vocal-chain-graph-dsp.mdc
.cursor/skills/fft-spectrum-engineering/: SKILL.md
.cursor/skills/liquid-glass-design/: FOR_NATIVE_PLUGIN_UI.md  SKILL.md
Artifacts/: README.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/dsp/eq/: EqBandShapes.h
Source/dsp/graph/: AudioNode.h  AudioNodeFactory.cpp  AudioNodeFactory.h  CompressorArchetypeNode.cpp  CompressorArchetypeNode.h  DeesserNode.cpp  DeesserNode.h  ExciterNode.cpp  ExciterNode.h  FilterNode.cpp  FilterNode.h  FlexGraphDesc.cpp  FlexGraphDesc.h  FlexGraphPlan.cpp  FlexGraphPlan.h  FlexGraphSerialization.cpp  FlexGraphSerialization.h  GainNode.h  GraphEngine.cpp  GraphEngine.h  GraphPlan.cpp  GraphPlan.h  GraphPlanFactory.cpp  GraphPlanFactory.h  ISpectrumSource.h  LatencyNode.cpp  LatencyNode.h  MergeDelayPad.cpp  MergeDelayPad.h  MicCorrectionNode.cpp  MicCorrectionNode.h  ParametricEqNode.cpp  ParametricEqNode.h  SpectralCompressorNode.cpp  SpectralCompressorNode.h  SpectrumAnalyzerNode.cpp  SpectrumAnalyzerNode.h  SpectrumTap.cpp  SpectrumTap.h
Source/params/: MacroRouting.cpp  MacroRouting.h  MicProfileChoices.cpp  MicProfileChoices.h  ModuleParamsRuntime.cpp  ModuleParamsRuntime.h  ParamIDs.h  ParameterLayout.cpp  ParameterLayout.h  Phase3RealtimeParams.h
Source/presets/: FactoryPresets.cpp  FactoryPresets.h
Source/ui/: ChainStripComponent.cpp  ChainStripComponent.h  ChainStripLayout.cpp  ChainStripLayout.h  DesignTokens.h  EditorVisualAssets.cpp  EditorVisualAssets.h  ReEqPanelComponent.cpp  ReEqPanelComponent.h
Tests/: DspDeterminismTests.cpp  DspTestHelpers.h  FlexGraphSerializationTests.cpp  GraphStressTests.cpp  GraphTests.cpp  MergePdcTests.cpp  PhaseAlignTests.cpp  StressMain.cpp  TestMain.cpp
docs/: ARCHITECTURE.md  BUILD_WINDOWS.md  CODE_HEALTH_AUDIT.md  CODE_REVIEW_CRITIQUE.md  CURSOR_SKILLS.md  FFT_SPECTRUM_ARCHITECTURE.md  HANDOFF_NEXT_AGENT.md  MIC_PROFILES_LIST.md  MIC_PROFILE_RESEARCH.md  PERF_CHECKPOINTS.md  PRODUCT_ARCHITECTURE_ROADMAP.md  PRODUCT_UX_CONCEPT.md  REEQ_PORT_REFERENCE.md  REFACTOR_SUSPICIOUS_LOG.md  ROADMAP.md  SEND_ROUTING_VISION.md  TESTING.md  UI_GRAPHICS_ROADMAP.md  VERSIONING.md
docs/design/: DESIGN_SYSTEM.md  UI_ASSETS.md
reference/ReJJ/: README.md
resources/design/: chain-graph-prototype.html
resources/design/tokens/: tokens.css  tokens.json
resources/mic_dataset/: AKG_C12.csv  AKG_C214.csv  AKG_C414.csv  AKG_P120.csv  AT2020.csv  ATR2100x.csv  Aston_Origin.csv  BM800.csv  Behringer_XM8500.csv  Coles_4038.csv  EV_RE20.csv  Fifine_K669.csv  Lewitt_440.csv  MXL_990.csv  Neumann_TLM102.csv  Neumann_TLM103.csv  Neumann_U67.csv  Neumann_U87.csv  README.md  Rode_NT1A.csv  Rode_NT2A.csv  Royer_R121.csv  Samson_Q2U.csv  Sennheiser_MK4.csv  Shure_KSM44.csv  Shure_SM57.csv  Shure_SM58.csv  Shure_SM7B.csv  Sony_C800G.csv  Superlux_PRA_D1.csv  Telefunken_U47.csv
resources/ui/: generate_placeholder_texture.py
scripts/: regression_loop_until_duration.sh
